--- a/EjemploPOOArchivosTextoSecuencial/ArchivosSecuencialPOO/nbproject/project.properties
+++ b/EjemploPOOArchivosTextoSecuencial/ArchivosSecuencialPOO/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=archivossecuencialpoo.ArchivosSecuencialPOO
+main.class=FILES.FilesNotasJava_CSV
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
